--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-windows:
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: SerialToUdpTranslator
-          path: dist/SerialToUdpTranslatorV1.0.exe
+          path: dist/SerialToUdpTranslatorV1.0.elf
 
       - name: Create release
         id: create_release
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.create_release.outputs.upload_url}}
-          asset_path: dist/SerialToUdpTranslatorV1.0.exe
-          asset_name: SerialToUdpTranslatorV1.0-Windows-x64.exe
+          asset_path: dist/SerialToUdpTranslatorV1.0.elf
+          asset_name: SerialToUdpTranslatorV1.0-Linux-x64.elf
           asset_content_type: application/zip
