--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -26,25 +26,25 @@ jobs:
           name: SerialToUdpTranslator
           path: dist/SerialToUdpTranslatorV1.0.elf
 
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v1.0.0
-          release_name: v1.0.0
-          body: |
-            Release v1.0.0
-          draft: false
-          prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{steps.create_release.outputs.upload_url}}
-          asset_path: dist/SerialToUdpTranslatorV1.0.elf
-          asset_name: SerialToUdpTranslatorV1.0-Linux-x64.elf
-          asset_content_type: application/zip
+    #   - name: Create release
+    #     id: create_release
+    #     uses: actions/create-release@v1
+    #     env:
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     with:
+    #       tag_name: v1.0.0-${{ github.run_id }}
+    #       release_name: v1.0.0-${{ github.run_id }}
+    #       body: |
+    #         Release v1.0.0
+    #       draft: false
+    #       prerelease: false
+    #   - name: Upload Release Asset
+    #     id: upload-release-asset
+    #     uses: actions/upload-release-asset@v1
+    #     env:
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     with:
+    #       upload_url: ${{steps.create_release.outputs.upload_url}}
+    #       asset_path: dist/SerialToUdpTranslatorV1.0.elf
+    #       asset_name: SerialToUdpTranslatorV1.0-Linux-x64.elf
+    #       asset_content_type: application/zip
