--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -32,12 +32,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v1.0.0
-          release_name: v1.0.0
+          tag_name: v1.0.0-${{ github.run_id }}
+          release_name: v1.0.0-${{ github.run_id }}
           body: |
             Release v1.0.0
           draft: false
           prerelease: false
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
