--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -2,7 +2,7 @@ name: Build Workflow Mac
 
 on:
   push:
-    branches: master
+    branches: nope
 
 jobs:
   build-windows:
@@ -38,7 +38,7 @@ jobs:
             Release v1.0.0
           draft: false
           prerelease: false
-          
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
