--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         - uses: actions/checkout@v2
         - uses: actions/setup-python@v4
           with:
-            python-version: "3.10"
+            python-version: "3.12"
         - name: Install redwrench
           shell: bash -l {0}
           run: |
@@ -22,17 +22,17 @@ jobs:
         - name: install PyInstaller
           shell: bash -l {0}
           run: |
-            pip3 install pyinstaller==5.9.0
+            pip3 install pyinstaller==6.6.0
         - name: Build Pyinstaller .exe (macOS and Linux)
           if: matrix.os != 'windows-latest'
           shell: bash -l {0}
           run: |
-            pyinstaller -n redwrench --onefile --windowed app.py
+            pyinstaller -n redwrench --onefile --windowed main.py
         - name: Build Pyinstaller .exe (Windows)
           if: matrix.os == 'windows-latest'
           shell: bash -l {0}
           run: |
-            pyinstaller -n redwrench --onefile app.py
+            pyinstaller -n redwrench --onefile main.py
         - uses: vimtor/action-zip@v1
           with:
             files: dist/
