--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,42 +2,82 @@ name: Build
 
 on:
   push:
-    branches: master
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
-    build-exe:
-        runs-on: ${{ matrix.os }}
-        strategy:
-          matrix:
-            os: [ubuntu-latest, macos-latest, windows-latest]
-        steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-python@v4
-          with:
-            python-version: "3.12"
-        - name: Install redwrench
-          shell: bash -l {0}
-          run: |
-            pip3 install .
-        - name: install PyInstaller
-          shell: bash -l {0}
-          run: |
-            pip3 install pyinstaller==6.6.0
-        - name: Build Pyinstaller .exe (macOS and Linux)
-          if: matrix.os != 'windows-latest'
-          shell: bash -l {0}
-          run: |
-            pyinstaller -n redwrench --onefile --windowed main.py
-        - name: Build Pyinstaller .exe (Windows)
-          if: matrix.os == 'windows-latest'
-          shell: bash -l {0}
-          run: |
-            pyinstaller -n redwrench --onefile main.py
-        - uses: vimtor/action-zip@v1
-          with:
-            files: dist/
-            recursive: false
-            dest: ${{ matrix.os }}-${{github.ref_name}}.zip
-        - uses: softprops/action-gh-release@v1
-          with:
-            files: ${{ matrix.os }}-${{github.ref_name}}.zip
+
+  createrelease:
+    name: Create Release
+    runs-on: [ubuntu-latest]
+    steps:
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+    - name: Output Release URL File
+      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
+    - name: Save Release URL File for publish
+      uses: actions/upload-artifact@v1
+      with:
+        name: release_url
+        path: release_url.txt
+
+  build:
+    name: Build packages
+    needs: createrelease
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: macos-latest
+            TARGET: macos
+            CMD_BUILD: >
+                pyinstaller -F -w -n SerialToUdpTranslator main.py &&
+                cd dist/ &&
+                zip -r9 SerialToUdpTranslator SerialToUdpTranslator.app/                
+            OUT_FILE_NAME: SerialToUdpTranslator.zip
+            ASSET_MIME: application/zip
+          - os: windows-latest
+            TARGET: windows
+            CMD_BUILD: pyinstaller -F -w -n SerialToUdpTranslator main.py
+            OUT_FILE_NAME: SerialToUdpTranslator.exe
+            ASSET_MIME: application/vnd.microsoft.portable-executable
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.12
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt        
+    - name: Build with pyinstaller for ${{matrix.TARGET}}
+      run: ${{matrix.CMD_BUILD}}
+    - name: Load Release URL File from release job
+      uses: actions/download-artifact@v1
+      with:
+        name: release_url
+    - name: Get Release File Name & Upload URL
+      id: get_release_info
+      shell: bash
+      run: |
+        value=`cat release_url/release_url.txt`
+        echo ::set-output name=upload_url::$value        
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.get_release_info.outputs.upload_url }}
+        asset_path: ./dist/${{ matrix.OUT_FILE_NAME}}
+        asset_name: ${{ matrix.OUT_FILE_NAME}}
+        asset_content_type: ${{ matrix.ASSET_MIME}}
