--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,20 +39,20 @@ jobs:
           - os: macos-latest
             TARGET: macos
             CMD_BUILD: >
-                pyinstaller -F -w -n SerialToUdpTranslator-Mac-x64 -i resources/icon.icns main.py &&
+                pyinstaller -F -w -n SerialToUdpTranslator-Mac-x64-${{ github.ref_name }} -i resources/icon.icns main.py &&
                 cd dist/ &&
-                zip -r9 SerialToUdpTranslator-Mac-x64 SerialToUdpTranslator-Mac-x64.app/                
-            OUT_FILE_NAME: SerialToUdpTranslator-Mac-x64.zip
+                zip -r9 SerialToUdpTranslator-Mac-x64-${{ github.ref_name  }} SerialToUdpTranslator-Mac-x64-${{ github.ref_name  }}.app/                
+            OUT_FILE_NAME: SerialToUdpTranslator-Mac-x64-${{ github.ref_name  }}.zip
             ASSET_MIME: application/zip
           - os: windows-latest
             TARGET: windows
-            CMD_BUILD: pyinstaller -F -w -n SerialToUdpTranslator-Win-x64 -i resources/icon.ico main.py
-            OUT_FILE_NAME: SerialToUdpTranslator-Win-x64.exe
+            CMD_BUILD: pyinstaller -F -w -n SerialToUdpTranslator-Win-x64-${{ github.ref_name  }} -i resources/icon.ico main.py
+            OUT_FILE_NAME: SerialToUdpTranslator-Win-x64-${{ github.ref_name  }}.exe
             ASSET_MIME: application/vnd.microsoft.portable-executable
           - os: ubuntu-latest
             TARGET: linux
-            CMD_BUILD: pyinstaller -F -n SerialToUdpTranslator-Linux-x64 -i resources/icon.ico main.py
-            OUT_FILE_NAME: SerialToUdpTranslator-Linux-x64
+            CMD_BUILD: pyinstaller -F -n SerialToUdpTranslator-Linux-x64-${{ github.ref_name  }} -i resources/icon.ico main.py
+            OUT_FILE_NAME: SerialToUdpTranslator-Linux-x64-${{ github.ref_name  }}
             ASSET_MIME: application/zip 
     steps:
     - uses: actions/checkout@v1
