--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,20 +39,20 @@ jobs:
           - os: macos-latest
             TARGET: macos
             CMD_BUILD: >
-                pyinstaller -F -w -n SerialToUdpTranslator-Mac-x64-${{ github.ref_name }} -i resources/icon.icns main.py &&
+                pyinstaller -F -w -n SerialToUdpTranslator-${{ github.ref_name }}-Mac-x64 -i resources/icon.icns main.py &&
                 cd dist/ &&
-                zip -r9 SerialToUdpTranslator-Mac-x64-${{ github.ref_name  }} SerialToUdpTranslator-Mac-x64-${{ github.ref_name  }}.app/                
-            OUT_FILE_NAME: SerialToUdpTranslator-Mac-x64-${{ github.ref_name  }}.zip
+                zip -r9 SerialToUdpTranslator-${{ github.ref_name }}-Mac-x64 SerialToUdpTranslator${{ github.ref_name }}-Mac-x64-.app/                
+            OUT_FILE_NAME: SerialToUdpTranslator-${{ github.ref_name }}-Mac-x64.zip
             ASSET_MIME: application/zip
           - os: windows-latest
             TARGET: windows
-            CMD_BUILD: pyinstaller -F -w -n SerialToUdpTranslator-Win-x64-${{ github.ref_name  }} -i resources/icon.ico main.py
-            OUT_FILE_NAME: SerialToUdpTranslator-Win-x64-${{ github.ref_name  }}.exe
+            CMD_BUILD: pyinstaller -F -w -n SerialToUdpTranslator-${{ github.ref_name }}-Win-x64 -i resources/icon.ico main.py
+            OUT_FILE_NAME: SerialToUdpTranslator-Win-${{ github.ref_name }}-x64.exe
             ASSET_MIME: application/vnd.microsoft.portable-executable
           - os: ubuntu-latest
             TARGET: linux
-            CMD_BUILD: pyinstaller -F -n SerialToUdpTranslator-Linux-x64-${{ github.ref_name  }} -i resources/icon.ico main.py
-            OUT_FILE_NAME: SerialToUdpTranslator-Linux-x64-${{ github.ref_name  }}
+            CMD_BUILD: pyinstaller -F -n SerialToUdpTranslator-${{ github.ref_name }}-Linux-x64 -i resources/icon.ico main.py
+            OUT_FILE_NAME: SerialToUdpTranslator-${{ github.ref_name }}-Linux-x64
             ASSET_MIME: application/zip 
     steps:
     - uses: actions/checkout@v1
@@ -64,8 +64,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt        
-    - name: Build with pyinstaller for ${{matrix.TARGET}}
-      run: ${{matrix.CMD_BUILD}}
+    - name: Build with pyinstaller for ${{ matrix.TARGET }}
+      run: ${{ matrix.CMD_BUILD }}
     - name: Load Release URL File from release job
       uses: actions/download-artifact@v1
       with:
