--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
             ASSET_MIME: application/zip
           - os: windows-latest
             TARGET: windows
-            CMD_BUILD: pyinstaller -F -n SerialToUdpTranslator-${{ github.ref_name }}-Win-x64 -i resources/icon.ico main.py
+            CMD_BUILD: pyinstaller -F -w -n SerialToUdpTranslator-${{ github.ref_name }}-Win-x64 -i resources/icon.ico main.py
             OUT_FILE_NAME: SerialToUdpTranslator-${{ github.ref_name }}-Win-x64.exe
             ASSET_MIME: application/vnd.microsoft.portable-executable
           - os: ubuntu-latest
